# plan-verifier

./: .gitignore  LIMITATIONS.md  Makefile  PROGRESS.md  PROJECT_SPEC.md  README.md  pyproject.toml
paper/: README.md  main.tex  references.bib
pivot/: PIVOT_SUMMARY.md  config.py  conformal.py  decision_model.py  extraction_ablation.py  h5_judge_tokens.py  proposition.md  recall_figure.py  sonnet_judge_h20.py  sonnet_judge_h40.py  sonnet_judge_h80.py  taxonomy.py  tools_realtrace.py
pivot/alfworld/: adapt.py  detect.py  translate_report.py
pivot/results/: alfworld_detection.json  conformal_report.json  decision_findings.json  decision_table.json  extraction_ablation.json  guardrail_taxonomy.json  guardrail_taxonomy.md  h5_judge_tokens.json  sonnet_judge_h20.json  sonnet_judge_h40.json  sonnet_judge_h80.json  tools_realtrace.json
results/: calibration.json  clean_but_flawed.json  downstream.json  latency_cost.json  metrics.csv  qualitative_examples.md  self_repair_quality.json  summary.json  threshold_sweep.json
results/horizon/: downstream_horizon.json  horizon_diagnostics.json  horizon_metrics.csv  summary.json
scripts/: generate_plans.py  generate_problems.py  horizon_pipeline.sh  paraphrase_plans.py  run_baselines.py  run_full_eval.py  run_horizon_eval.py  train_trust_model.py  verify_plans.py
tests/: test_cli.py
tests/baselines/: test_baselines.py
tests/domains/: test_blocksworld.py  test_generation_cross_process.py  test_horizon.py  test_logistics.py  test_planner.py  test_tools.py
tests/fusion/: test_decision.py
verifier/: __main__.py  llm.py
(+43 files in other folders)
