[project]
name = "plan-verifier"
version = "0.1.0"
description = "Pre-execution verifier for LLM-generated plans: symbolic checking + calibrated learned trust scoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "matplotlib>=3.11.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
verifier = "verifier.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
